--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@plugin "tailwindcss-animate";
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -9,6 +11,48 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-poppins);
+}
+
+@theme {
+  --color-brand: #fa7275;
+  --color-brand-100: #ea6365;
+  --color-red: #ff7474;
+  --color-error: #b80000;
+  --color-green: #3dd9b3;
+  --color-blue: #56b8ff;
+  --color-pink: #eea8fd;
+  --color-orange: #f9ab72;
+  --color-light-100: #333f4e;
+  --color-light-200: #a3b2c7;
+  --color-light-300: #f2f5f9;
+  --color-light-400: #f2f4f8;
+  --color-dark-100: #04050c;
+  --color-dark-200: #131524;
+
+  --font-poppins: "Poppins", sans-serif;
+  --radius: 1rem; /* adjust as needed */
+
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+
+  --drop-shadow-1: 0px 10px 30px rgba(66, 71, 97, 0.1);
+  --drop-shadow-2: 0 8px 30px rgba(65, 89, 214, 0.3);
+  --drop-shadow-3: 0 8px 30px rgba(65, 89, 214, 0.1);
+
+  --animate-caret-blink: caret-blink 1.25s ease-out infinite;
+
+  @keyframes caret-blink {
+    0%,
+    70%,
+    100% {
+      opacity: 1;
+    }
+    20%,
+    50% {
+      opacity: 0;
+    }
+  }
 }
 
 @media (prefers-color-scheme: dark) {
