Refactor utility classes to enforce important styles for better specificity and consistency

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,7 @@
   @apply mx-auto max-w-7xl px-5;
 }
 @utility primary-btn {
-  @apply bg-brand hover:bg-brand-100 transition-all rounded-full button;
+  @apply bg-brand! hover:bg-brand-100! transition-all! rounded-full! button!;
 }
 @utility flex-center {
   @apply flex items-center justify-center;
@@ -142,7 +142,7 @@
   @apply border-none shadow-none p-0 shad-no-focus placeholder:text-light-200 body-2;
 }
 @utility shad-form-item {
-  @apply flex h-[78px] flex-col justify-center rounded-xl border border-light-300 px-4 drop-shadow-1;
+  @apply flex! h-[78px] flex-col justify-center rounded-xl border border-light-300 px-4 drop-shadow-1;
 }
 @utility shad-form-label {
   @apply text-light-100 pt-2 body-2 w-full;
@@ -154,7 +154,7 @@
   @apply space-y-4 max-w-[95%] sm:w-fit rounded-xl md:rounded-[30px] px-4 md:px-8 py-10 bg-white outline-none;
 }
 @utility shad-submit-btn {
-  @apply bg-brand button hover:bg-brand-100 transition-all rounded-full;
+  @apply bg-brand! button! hover:bg-brand-100! transition-all! rounded-full!;
 }
 @utility shad-otp {
   @apply w-full flex gap-1 sm:gap-2 justify-between;
@@ -262,7 +262,7 @@
   @apply h-[52px] flex-1 rounded-full bg-white text-light-100 hover:bg-transparent;
 }
 @utility modal-submit-button {
-  @apply primary-btn !mx-0 h-[52px] w-full flex-1;
+  @apply primary-btn! mx-0! h-[52px]! w-full! flex-1!;
 }
 
 /* ActionsModalContent */
@@ -296,7 +296,7 @@
   @apply h1 text-center text-light-100 md:text-left;
 }
 @utility form-submit-button {
-  @apply primary-btn h-[66px];
+  @apply primary-btn! h-[66px]!;
 }
 @utility error-message {
   @apply body-2 mx-auto w-fit rounded-xl bg-error/5 px-8 py-4 text-center text-error;
@@ -335,7 +335,7 @@
 
 /* FileUploader */
 @utility uploader-button {
-  @apply primary-btn h-[52px] gap-2 px-10 drop-shadow-1;
+  @apply primary-btn! h-[52px]! gap-2! px-10! drop-shadow-1!;
 }
 @utility uploader-preview-list {
   @apply fixed bottom-10 right-10 z-50 flex size-full h-fit max-w-[480px] flex-col gap-3 rounded-[20px] bg-white p-7 drop-shadow-3;
@@ -347,7 +347,7 @@
   @apply subtitle-2 mb-2 line-clamp-1 max-w-[300px];
 }
 @utility error-toast {
-  @apply bg-red !rounded-[10px];
+  @apply bg-red! rounded-[10px]!;
 }
 
 /* Header */
@@ -428,10 +428,10 @@
 
 /* Sort */
 @utility sort-select {
-  @apply shad-no-focus h-11 w-full rounded-[8px] border-transparent bg-white !shadow-sm sm:w-[210px];
+  @apply shad-no-focus! h-11! w-full! rounded-[8px]! border-transparent! bg-white! shadow-sm!;
 }
 @utility sort-select-content {
-  @apply !drop-shadow-3;
+  @apply drop-shadow-3!;
 }
 
 /* Thumbnail */
