Enhance ActionsDropdown component with dialog functionality for file actions

--- a/app/globals.css
+++ b/app/globals.css
@@ -166,7 +166,7 @@
   @apply pt-0;
 }
 @utility shad-sheet-button {
-  @apply focus:ring-0 focus:ring-offset-0 focus-visible:border-none outline-none focus-visible:outline-none focus-visible:ring-transparent focus-visible:ring-offset-0;
+  @apply focus:ring-0! focus:ring-offset-0! focus-visible:border-none! outline-none! focus-visible:outline-none! focus-visible:ring-transparent! focus-visible:ring-offset-0!;
 }
 @utility shad-dialog-button {
   @apply shad-sheet-button;
@@ -175,7 +175,7 @@
   @apply cursor-pointer;
 }
 @utility shad-dialog {
-  @apply rounded-[26px] w-[90%] max-w-[400px] px-6 py-8;
+  @apply rounded-[26px]! w-[90%]! max-w-[400px]! px-6! py-8!;
 }
 @utility shad-chart-title {
   @apply text-white;
@@ -259,7 +259,7 @@
   @apply font-medium text-brand-100;
 }
 @utility modal-cancel-button {
-  @apply h-[52px] flex-1 rounded-full bg-white text-light-100 hover:bg-transparent;
+  @apply h-[52px]! flex-1! rounded-full! bg-white text-light-100! hover:bg-transparent!;
 }
 @utility modal-submit-button {
   @apply primary-btn! mx-0! h-[52px]! w-full! flex-1!;
