Refactor StatsChart component to integrate RadialBarChart for visualizing storage usage and update styles in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -312,25 +312,25 @@
 
 /* Chart */
 @utility chart {
-  @apply flex items-center rounded-[20px] bg-brand p-2 text-white md:flex-col xl:flex-row;
+  @apply flex! items-center! rounded-[20px]! bg-brand! p-2! text-white! md:flex-col! xl:flex-row!;
 }
 @utility chart-container {
-  @apply mx-auto aspect-square w-[180px] text-white xl:w-[200px];
+  @apply mx-auto! aspect-square! w-[180px]! text-white! xl:w-[200px]!;
 }
 @utility polar-grid {
-  @apply first:fill-white/20 last:fill-brand;
+  @apply first:fill-white/20! last:fill-brand!;
 }
 @utility chart-details {
   @apply flex-1 items-start px-3 py-0 sm:px-5 lg:p-3 xl:pr-5;
 }
 @utility chart-total-percentage {
-  @apply fill-white text-4xl font-bold;
+  @apply fill-white! text-4xl! font-bold!;
 }
 @utility chart-title {
-  @apply h3 font-bold md:text-center lg:text-left;
+  @apply h3! font-bold! md:text-center! lg:text-left!;
 }
 @utility chart-description {
-  @apply subtitle-1 mt-2 w-full text-white/70 md:text-center lg:text-left;
+  @apply subtitle-1! mt-2! w-full! text-white/50! md:text-center! lg:text-left!;
 }
 
 /* FileUploader */
